add update password and update transaction
